--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
  <!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
+<html>
+
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<head>
+	<meta charset="UTF-8">
+	<title>Portfolio</title>
+	<link href="style.css" rel="stylesheet"/>
+</head>
 <body>
 
 <img src="img_la.jpg" alt="LA" style="width:100%">
