--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
  <p>This is a paragraph.</p>
  <p>This is another paragraph.</p>
 </div>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div> 
 
 </body>
 </html> 
