--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 </head>
 <body>
 
-<div class="">
-	<h1>This is a Heading</h1>
-	<p>This is a paragraph.</p>
-	<p>This is another paragraph.</p>
-</div>
-
 <div class="topnav">
 	<a class="active" href="#home">Home</a>
 	<a href="#news">News</a>
 	<a href="#contact">Contact</a>
 	<a href="#about">About</a>
 </div> 
+
+<h3>Olivia Brunt</h3>
+</hr>
+<p class="about me">This is text eplaining all about me.</p>
 
 </body>
 </html> 
