--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <h3>Olivia Brunt</h3>
 </hr>
-<p class="about me">This is text eplaining all about me.</p>
+<p class="aboutMe">This is text eplaining all about me.</p>
 
 </body>
 </html> 
