--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <h3>Olivia Brunt</h3>
 </br>
-<p class="aboutMe">This is text explaining all about me.</p>
+<p class="aboutMe">I am a second year software engineering student at <span class="lightPurple">Western University.</span></p>
+
+	
 
 </body>
 </html> 
