--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<a href="#about">About</a>
 </div> 
 
-<h3>Olivia Brunt</h3>
+<h3 class="header">Olivia Brunt</h3>
 </br>
-<p class="aboutMe">I am a second year software engineering student at <span class="lightPurple">Western University.</span></p>
+<p class="text">I am a second year software engineering student at <span class="lightPurple">Western University.</span></p>
 
 	
 
