--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8">  <!-- Importing special characters-->
 	<title>Portfolio</title>
-	<link href="style.css" rel="stylesheet"/>
+	<link href="style.css" rel="stylesheet"/>  <!-- Importing css code-->
 </head>
 <body>
 
-<div class="topnav">
-	<a class="active" href="#home">Home</a>
-	<a href="#news">News</a>
-	<a href="#contact">Contact</a>
-	<a href="#about">About</a>
+<div class="topnav">  <!-- Groups the look buttons-->
+	<a class="active" href="#home">Home</a>  <!-- Points to top of the page-->
+	<a href="#news">News</a>  <!-- Points to the news section-->
+	<a href="#contact">Contact</a> <!-- Points to contact section-->
+	<a href="#about">About</a>  <!-- Points to about section-->
 </div> 
 
-<h3 class="header">Olivia Brunt</h3>
-<hr>
-<p class="text">I am a second year software engineering student at <span class="lightPurple">Western University.</span></p>
 
-	
+<h3 id="news">My Portfolio</h3>  <!-- Start of the News section-->
+<div class="hero">
+  <img id="news" src="laptopTransparent.png"/> <!-- Laptop image-->
+</div>
+<p></p>
+  
+<br><br>
+  
+<a id="contact">Some words</a><br>  <!-- Start of the contact section-->
+  
+<a id="about">  <!-- Start of about section-->
+<h3 class="header">Olivia Brunt</h3></a>  <!-- Displaying my name-->
+<hr>  <!-- Line break-->
+<p class="text">I am a second year software engineering student at <span class="lightPurple">Western University.</span> I </p>  <!-- Words explaining myself. It includes some different colour text-->
+
+<button onclick='alert("Click")'><span class="b"></span></button>
+
 
 </body>
 </html> 
