--- a/index.html
+++ b/index.html
@@ -17,23 +17,51 @@
 </div> 
 
 
-<h3 id="news">My Portfolio</h3>  <!-- Start of the News section-->
+<center><h2 class="title" id="home">My Portfolio</h2></center>  <!-- Start of the News section-->
+
+  
 <div class="hero">
   <img id="news" src="laptopTransparent.png"/> <!-- Laptop image-->
+  <button onclick='alert("Click")'><span class="b"></span></button> <!-- Interact button-->
 </div>
-<p></p>
-  
-<br><br>
-  
-<a id="contact">Some words</a><br>  <!-- Start of the contact section-->
+
+<br>
   
 <a id="about">  <!-- Start of about section-->
 <h3 class="header">Olivia Brunt</h3></a>  <!-- Displaying my name-->
 <hr>  <!-- Line break-->
-<p class="text">I am a second year software engineering student at <span class="lightPurple">Western University.</span> I </p>  <!-- Words explaining myself. It includes some different colour text-->
+<p class="text">I am a second year software engineering student at <span class="lightPurple">Western University.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>  <!-- Words explaining myself. It includes some different colour text-->
 
-<button onclick='alert("Click")'><span class="b"></span></button>
+<br>
+
+<h3 class="header" id="news">Work</h3></a>  <!-- Displaying my name-->
+<hr>  <!-- Line break-->
+  
+<table>  <!-- Creating table-->
+  <tbody>   <!-- Start of table body-->
+  <tr>  <!-- Listing elements-->
+    <td> <ul><li>1887- Self-Portrait with a Straw Hat was painted</li></ul> </td><!-- Adding the text and bullet points-->
+  </tr>
+    <tr>
+    <td><ul><li>1888- Cafe Terrace at Night was painted</li></ul></td>
+  </tr>
+  <tr>
+    <td><ul><li>1889- Starry Night was painted</li></ul></td>
+  </tr>
+  <tr>
+    <td><ul><li>1890- Wheatfield With Crows was painted</li></ul</td>
+  </tr>
+</tbody></table> <!-- Closing the table-->
+
+  <a id="contact"><h3 class="header">Contact</h3></a>  <!-- Start of the contact section-->
+  <hr>
+  
+  <form>  <!-- Start of form input-->
+    <span class="text">Input you email:</span> <input type='text' name='email'> <!-- Input field-->
+    <input type='submit' value='Click here'/> <!-- Submit button-->
+  </form>
 
 
+ <center><p class="text">Olivia Brunt's Portfolio</p></center> <!-- Centered footer text-->
 </body>
 </html> 
